# sophons

./: README.md  pyproject.toml  requirements.txt
sophons/: agent.py  chat.py  summarizer.py
sophons/utils/: blog_extractor.py  formatter.py  gen_collection.py  graph_generator.py  language_codes.py  logger.py  models.py  slack.py  slack_utils.py  update_db.py  update_vdb.py  video_extractor.py
ui/: package-lock.json  package.json
ui/public/: index.html  manifest.json
ui/src/: App.js  index.js  style.css
ui/src/components/: ArticleCard.css  ArticleCard.jsx  ArticleDetails.css  ArticleDetails.jsx  ArticleList.css  ArticleList.jsx  BlogPage.css  BlogPage.jsx  Calender.css  Calender.jsx  ChatBot.css  ChatBot.jsx  ChatPage.css  ChatPage.jsx  DashBoard.css  DashBoard.jsx  Discover.css  Discover.jsx  Home.css  Home.jsx  RealTime.jsx  SearchBar.css  SearchBar.jsx  SideBar.css  SideBar.jsx  StatsGraph.css  StatsGraph.jsx  Topic.css  Topic.jsx  TopicInventoryChart.css  TopicInventoryChary.jsx  Topics.css  Topics.jsx  Topics2.jsx  server.js
ui/src/views/: desktop6.css  desktop6.js
